Dialog Alignmet Fixed

--- a/client/styles/components/_modal.scss
+++ b/client/styles/components/_modal.scss
@@ -1,7 +1,8 @@
 .modal {
   position: absolute;
   top: #{60 / $base-font-size}rem;
-  right: calc(50vw - #{(400 / $base-font-size) / 2}rem);
+  right: 50%;
+  transform: translate(50%, 0);
   z-index: 100;
   outline: none;
 }
